# rayon-adaptive

./: .gitignore  Cargo.toml  generate_graphs.gp  generate_graphs_speedup_block_size.gp  generate_graphs_speedup_block_size2.gp  script_gnuplot.gp  show_plot.sh
data/: generate_graphs.gp  generate_graphs_29032019.gp  generate_graphs_comp.gp  script_gnuplot.gp
examples/: .merge3join.rs.swp  merge3join.rs
logs/: index.html
src/: lib.rs  policy.rs  prelude.rs  schedulers.rs  scheduling.rs  utils.rs
src/algorithms/: merge2join.rs  merge3_by_2_join.rs  merge3join.rs  merge3join_2_buffers.rs  merge3join_context_2_buffers.rs  merge3join_no_copy.rs  merge3join_swap.rs  merge_join_context_2_buffers.rs  merge_sort.rs  merge_sort_no_copy.rs  merge_sort_raw.rs  merge_sort_raw_cut.rs  merge_sort_raw_cut_ceil.rs  merge_sort_raw_cut_floor.rs  merge_sort_raw_logs.rs  merge_sort_swap_blocks.rs  merging_algorithms.rs  mod.rs
src/iter/: mod.rs  work.rs
